<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp"
        android:gravity="left"
        android:text="@string/Server_ip"
        android:textColor="@color/black" >
    </TextView>

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left"
        android:hint="@string/Acquire_ServerIP" >
    </EditText>

    <TextView
        android:id="@+id/text_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/Server_Port"
        android:textColor="@color/black" >
    </TextView>

    <EditText
        android:id="@+id/edit_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:digits="1234567890"
        android:gravity="left"
        android:hint="@string/Acquire_ServerPort" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Connect" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/Back" />
    </LinearLayout>

</LinearLayout>